[package]
name = "from_nested_tuple"
version = "0.1.0"
edition = "2024"

[dependencies]
from_nested_tuple_derive = { path = "./from_nested_tuple_derive" }
chumsky = { version = "0.12.0", features = ["extension"]}

[dev-dependencies]
from_nested_tuple = { path = "." }
chumsky = "0.12.0"

[workspace]
members = [
    "from_nested_tuple_derive",
    "."
]

