[package]
name = "from_nested_tuple"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
description = "Create structs from left-nested tuples (meant to complement chumsky)"
repository = "https://github.com/MasterTemple/from_nested_tuple/"
readme = "README.md"
keywords = ["chumsky", "nested", "tuple"]

[dependencies]
from_nested_tuple_derive = { version = "0.1.0", path = "./from_nested_tuple_derive" }
chumsky = { version = "0.12.0", features = ["extension"]}

[dev-dependencies]
from_nested_tuple = { path = "." }
chumsky = "0.12.0"

[workspace]
members = [
    "from_nested_tuple_derive",
]

