[package]
name = "from_nested_tuple_derive"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
description = "Derive macro for from_nested_tuple"
repository = "https://github.com/MasterTemple/from_nested_tuple/"
readme = "README.md"
keywords = ["chumsky", "nested", "tuple"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
